2021-07-05  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.11

	- The restoreDatabase method is added.
	- Compatibility to the C++ library: Tkrzw 0.9.38

2021-06-02  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.10

	- Add CompareExchangeMulti method.

2021-05-29  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.9

	- Add getMulti, setMulti, and removeMulti methods.
	- compareExchange supports expectation for missing records.
	- Compatibility to the C++ library: Tkrzw 0.9.21

2021-05-16  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.8

	- Supports tunning parameters of Direct I/O.
	- Compatibility to the C++ library: Tkrzw 0.9.17